[gd_scene load_steps=2 format=3 uid="uid://b0i08kfoswbrd"]

[ext_resource type="Script" uid="uid://dgl538u0ufkle" path="res://scenes/enemy_container.gd" id="1_7x0ya"]

[node name="EnemyContainer" type="Node2D"]
script = ExtResource("1_7x0ya")

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
